Changes since 2.0.1
-------------------
 * User-Agent is now "ezRETS/2.0.2 (librets/1.1.1)"

 Enhancements
  * Translator for SQL_NUMERIC has been written.  SQLServer DTS asks
    for fields as NUMERIC in some circustances.  Reported by Wayne
    Bienek.

 Developer Notes
  * Due to NUMERIC translator, boost 1.33.1 is now required

Changes since 2.0.0
-------------------
 * User-Agent is now "ezRETS/2.0.1 (librets/1.1.1)"

 Bug fixes
  * Column widths where reported at COMPACT-DECODED size when COMPACT
    was used as the search format.  So switching to COMPACT when
    COMPACT-DECODED caused MS Query to have Out of Memory issue had
    no positive effect.  Thanks to Elliot Onn for helping discover this.

Changes since 1.2.2
-------------------
 * User-Agent is now "ezRETS/2.0.0 (librets/1.1.1)"

 Enhancements
  * RETS GetObject now supported.  ezRETS can be used to download images.
  * SQL Syntax document updated with GetObject info
  * count(*) supported for data queries

 Developer Notes:
  * libRETS 1.1.1 is required to build
  * iODBC now supported as well as unixODBC for unix systems

Changes since 1.2.1
-------------------
 * User-Agent is now "ezRETS/1.2.2 (librets/1.1.0b2.1)"

 Bug fixes
  * SQLColAttribute didn't correctly make LOOKUP and LOOKUP_MULTI look like
    a character field.

 Developer notes:
  * libRETS 1.1.0b2 or 1.1.0b2.1 is required to build.  b2.1 is only
    needed for going against Paragon systems.

Changes since 1.2.0
-------------------
 * User-Agent is now "ezRETS/1.2.1 (librets/1.1.0b2.1)"

 Bug fixes:
  * Two small fixes (one in libRETS) to make ezRETS happy with
    Paragon.
  * Null-terminate the error code string.  This makes ruby happy,
    probably others as well.

 Developer notes:
  * libRETS 1.1.0b2 or 1.1.0b2.1 is required to build.  b2.1 is only
    needed for going against Paragon systems.

Changes since 1.1.0
-------------------
 * User-Agent is now "ezRETS/1.2.0 (librets/1.0.0b1)"