@@ -60,13 +60,14 @@ const char * CLASS::INI_IGNORE_METADATA_TYPE = "IgnoreMetadataType";
 const char * CLASS::INI_USE_COMPACT_FORMAT = "UseCompactFormat";
 const char * CLASS::INI_DISABLE_GETOBJECT_METADATA =
     "DisableGetObjectMetadata";
+const char * CLASS::INI_ENABLE_USER_AGENT_AUTH = "EnableUserAgentAuth";
 const char * CLASS::INI_USER_AGENT_PASSWORD = "UserAgentPassword";
 const char * CLASS::INI_USER_AGENT_AUTH_TYPE = "UserAgentAuthType";
 
 const char * odbcrets::RETS_1_0_STRING = "1.0";
 const char * odbcrets::RETS_1_5_STRING = "1.5";
 
-const char * odbcrets::USER_AGENT_AUTH_NONE_STRING = "NONE";
+const char * odbcrets::USER_AGENT_AUTH_RETS_1_7_STRING = "RETS 1.7";
 const char * odbcrets::USER_AGENT_AUTH_INTEREALTY_STRING =
     "NON-STANDARD INTEREALTY";
 
@@ -76,7 +77,7 @@ const string CLASS::DEFAULT_USER_AGENT =
 
 const lr::RetsVersion CLASS::DEFAULT_RETS_VERSION = lr::RETS_1_5;
 const lr::UserAgentAuthType CLASS::DEFAULT_UA_AUTH_TYPE =
-    lr::USER_AGENT_AUTH_NONE;
+    lr::USER_AGENT_AUTH_INTEREALTY;
 
 bool DataSource::stringToBool(string aString)
 {
@@ -125,9 +126,9 @@ lr::RetsVersion odbcrets::StringToRetsVersion(string versionString,
 
 string odbcrets::UserAgentAuthTypeToString(lr::UserAgentAuthType authType)
 {
-    if (authType == lr::USER_AGENT_AUTH_NONE)
+    if (authType == lr::USER_AGENT_AUTH_RETS_1_7)
     {
-        return USER_AGENT_AUTH_NONE_STRING;
+        return USER_AGENT_AUTH_RETS_1_7_STRING;
     }
     else if (authType == lr::USER_AGENT_AUTH_INTEREALTY)
     {
@@ -143,9 +144,9 @@ string odbcrets::UserAgentAuthTypeToString(lr::UserAgentAuthType authType)
 lr::UserAgentAuthType odbcrets::StringToUserAgentAuthType(
     string typeString, lr::UserAgentAuthType defaultType)
 {
-    if (typeString == USER_AGENT_AUTH_NONE_STRING)
+    if (typeString == USER_AGENT_AUTH_RETS_1_7_STRING)
     {
-        return lr::USER_AGENT_AUTH_NONE;
+        return lr::USER_AGENT_AUTH_RETS_1_7;
     }
     else if (typeString == USER_AGENT_AUTH_INTEREALTY_STRING)
     {
@@ -217,6 +218,8 @@ void DataSource::MergeFromIni()
         mUseCompactFormat = GetProfileBool(INI_USE_COMPACT_FORMAT, false);
         mDisableGetObjectMetadata =
             GetProfileBool(INI_DISABLE_GETOBJECT_METADATA, true);
+        mEnableUserAgentAuth =
+            GetProfileBool(INI_ENABLE_USER_AGENT_AUTH, false);
         MergeFromProfileString(mUserAgentPassword, INI_USER_AGENT_PASSWORD);
         MergeFromProfileString(mUserAgentAuthTypeString, INI_USER_AGENT_AUTH_TYPE);
     }
@@ -241,6 +244,7 @@ void DataSource::WriteToIni()
     WriteProfileString(INI_USE_COMPACT_FORMAT, mUseCompactFormat);
     WriteProfileString(INI_DISABLE_GETOBJECT_METADATA,
                        mDisableGetObjectMetadata);
+    WriteProfileString(INI_ENABLE_USER_AGENT_AUTH, mEnableUserAgentAuth);
     WriteProfileString(INI_USER_AGENT_PASSWORD, mUserAgentPassword);
     WriteProfileString(INI_USER_AGENT_AUTH_TYPE, mUserAgentAuthTypeString);
 }
@@ -525,6 +529,16 @@ void DataSource::SetUserAgentAuthType(librets::UserAgentAuthType type)
 {
     mUserAgentAuthTypeString = UserAgentAuthTypeToString(type);
 }
+
+bool DataSource::GetEnableUserAgentAuth() const
+{
+    return mEnableUserAgentAuth;
+}
+
+void DataSource::SetEnableUserAgentAuth(bool enable)
+{
+    mEnableUserAgentAuth = enable;
+}
  
 bool DataSource::IsComplete() const
 {
@@ -589,12 +603,16 @@ string DataSource::GetConnectionString() const
                                  mDisableGetObjectMetadata);
     }
 
-    AppendToConnectionString(connectionString, INI_USER_AGENT_PASSWORD,
-                             mUserAgentPassword);
-
-    AppendToConnectionString(connectionString, INI_USER_AGENT_AUTH_TYPE,
-                             mUserAgentAuthTypeString);
-
+    if (mEnableUserAgentAuth)
+    {
+        AppendToConnectionString(connectionString, INI_ENABLE_USER_AGENT_AUTH,
+                                 mEnableUserAgentAuth);
+        AppendToConnectionString(connectionString, INI_USER_AGENT_PASSWORD,
+                                 mUserAgentPassword);
+        AppendToConnectionString(connectionString, INI_USER_AGENT_AUTH_TYPE,
+                                 mUserAgentAuthTypeString);
+    }
+    
     return connectionString;
 }
 
@@ -647,8 +665,9 @@ ostream & DataSource::Print(ostream & out) const
         << ", ignore metadata type: " << mIgnoreMetadataType
         << ", use COMPACT format: " << mUseCompactFormat
         << ", RETS version: " << mRetsVersionString
-        << ", UA Password: " << mUserAgentPassword
-        << ", UA Type: " << mUserAgentAuthTypeString;
+        << ", Enabled User-Agent Auth: " << mEnableUserAgentAuth
+        << ", User-Agent Password: " << mUserAgentPassword
+        << ", User-Agent Type: " << mUserAgentAuthTypeString;
 
     return out;
 }
@@ -729,6 +748,10 @@ void DataSource::SetFromOdbcConnectionString(string connectionString)
         {
             mDisableGetObjectMetadata = stringToBool(value);
         }
+        else if (key == INI_ENABLE_USER_AGENT_AUTH)
+        {
+            mEnableUserAgentAuth = stringToBool(value);
+        }
         else if (key == INI_USER_AGENT_PASSWORD)
         {
             mUserAgentPassword = value;
@@ -751,10 +774,9 @@ lr::RetsSessionPtr CLASS::CreateRetsSession() const
     session->SetUserAgent(GetUserAgent());
     session->SetRetsVersion(GetRetsVersion());
 
-    lr::UserAgentAuthType type = GetUserAgentAuthType();
-    if (type != lr::USER_AGENT_AUTH_NONE)
+    if (mEnableUserAgentAuth)
     {
-        session->SetUserAgentAuthType(type);
+        session->SetUserAgentAuthType(GetUserAgentAuthType());
         session->SetUserAgentPassword(mUserAgentPassword);
     }
 
